@@ -1,6 +1,12 @@
 2008-02-19  Alexander Larsson  <alexl@redhat.com>
 
         * daemon/gvfsbackendsftp.c:
+	Authentication fixups (#511517)
+	Patch from Carlos Garcia Campos
+
+2008-02-19  Alexander Larsson  <alexl@redhat.com>
+
+        * daemon/gvfsbackendsftp.c:
         * daemon/gvfsbackendtrash.c:
         * gconf/gapplookupgconf.c:
         * test/benchmark-common.c:
